Added comments to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- http://stackoverflow.com/questions/18164230/add-text-label-to-d3-node-in-force-directed-graph-and-resize-on-hover -->
-<!-- http://bl.ocks.org/mbostock/2706022 -->
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
@@ -185,4 +183,7 @@ d3.json("data.json", function(error, graph) {
 </script>
 <h2> Dataset: SNAP social circles - Facebook </h2>
 <h3> Authors: jhh283, rj288 </h3>
+<br>
+<div> Warning: D3 data may take some time to load </div>
+<div> Hover over individual vertices to see ID & Community assignment </div>
 </body>
